Buy button > Reduce  "z-index" to ensure it doesn’t override the menu/cart drawer

--- a/themes/origins/styles/featured-product.scss
+++ b/themes/origins/styles/featured-product.scss
@@ -411,7 +411,7 @@
 
         .actions[data-sticky],
         > yc-product-form {
-          z-index: 2;
+          z-index: 1;
           margin: 1em;
           padding: 0.5em;
           display: flex;
